--- a/packages/embed-examples/index.ejs
+++ b/packages/embed-examples/index.ejs
@@ -29,9 +29,7 @@
     }
   </style>
   <title><%= title %></title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="preload" as="style">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700&display=swap" rel="preload" as="style">
-  <script src="https://static.matterport.com/showcase-sdk/2.0.1-0-g64e7e88/sdk.js"></script>
+  <script src='https://static.matterport.com/showcase-sdk/latest.js'></script>
 </head>
 
 <body>
