--- a/packages/embed-examples/examples/common/index.ejs
+++ b/packages/embed-examples/examples/common/index.ejs
@@ -8,10 +8,7 @@
     />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta charset="UTF-8" />
     <style>
       body {
@@ -19,7 +16,7 @@
         margin: 0px;
         padding: 0px;
         overflow: hidden;
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
         position: relative;
       }
 
