--- a/packages/easter/src/main.css
+++ b/packages/easter/src/main.css
@@ -1,4 +1,3 @@
-
 .overlay-container {
   position: fixed;
   width: 100%;
@@ -58,7 +57,7 @@ button {
   text-align: center;
   letter-spacing: 2px;
   text-transform: uppercase;
-  color: #F5F4F3;
+  color: #f5f4f3;
   background: #222222;
   width: 190px;
   height: 48px;
@@ -94,7 +93,7 @@ button {
   float: right;
   width: 200px;
   height: 257px;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0, 0, 0, 0.8);
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -102,7 +101,7 @@ button {
   line-height: 26px;
   text-align: center;
   letter-spacing: 0.2px;
-  color: #F5F4F3;
+  color: #f5f4f3;
   pointer-events: all;
 }
 
@@ -115,12 +114,12 @@ button {
   text-align: center;
   letter-spacing: 0.2px;
   text-decoration-line: underline;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
 }
 
 .game-hint:hover {
-  color: #FF3158;
+  color: #ff3158;
 }
 
 .no-pointer-events {
@@ -128,7 +127,7 @@ button {
 }
 
 .dark {
-  background-color: rgba(20,20,20,0.8);
+  background-color: rgba(20, 20, 20, 0.8);
 }
 
 .game-over .text-wrapper {
@@ -171,7 +170,7 @@ button {
   line-height: 26px;
   text-align: center;
   letter-spacing: 0.2px;
-  color: #F5F4F3;
+  color: #f5f4f3;
   padding-top: 5px;
 }
 
@@ -183,7 +182,7 @@ button {
   line-height: 26px;
   text-align: center;
   letter-spacing: 0.2px;
-  color: #F5F4F3;
+  color: #f5f4f3;
   width: 35px;
   float: left;
   padding-left: 29px;
@@ -220,11 +219,11 @@ button {
   -webkit-border-radius: 29px;
   -moz-border-radius: 29px;
   border-radius: 29px;
-  background: #F5F4F3;
+  background: #f5f4f3;
 }
 
 .link-background:hover {
-  background: #FF3158;
+  background: #ff3158;
 }
 
 .link-icon {
@@ -240,7 +239,7 @@ button {
 .url-string {
   width: 255px;
   height: 48px;
-  background: #F5F4F3;
+  background: #f5f4f3;
   line-height: 1;
   font-family: Roboto;
   font-style: normal;
@@ -303,7 +302,7 @@ button {
     text-align: center;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: #F5F4F3;
+    color: #f5f4f3;
     width: 92%;
     padding: 12px;
   }
@@ -343,7 +342,7 @@ button {
     text-align: center;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: #F5F4F3;
+    color: #f5f4f3;
     margin-top: 20px;
     width: 95%;
   }
@@ -382,7 +381,7 @@ button {
     line-height: 22px;
     text-align: center;
     letter-spacing: 0.2px;
-    color: #F5F4F3;
+    color: #f5f4f3;
     text-align: left;
     padding: unset;
   }
@@ -395,7 +394,7 @@ button {
     line-height: 22px;
     text-align: center;
     letter-spacing: 0.2px;
-    color: #F5F4F3;
+    color: #f5f4f3;
     padding: unset;
   }
 
@@ -407,7 +406,7 @@ button {
     line-height: 22px;
     text-align: right;
     letter-spacing: 0.2px;
-    color: #F5F4F3;
+    color: #f5f4f3;
     padding: unset;
     padding-left: 5px;
   }
@@ -420,7 +419,7 @@ button {
     line-height: 26px;
     letter-spacing: 0.2px;
     text-decoration-line: underline;
-    color: #FFFFFF;
+    color: #ffffff;
     text-align: left;
   }
 
