Updated Embed Examples
Moved Training Tags Demo to /embed-examples/
Added Training Tags Overlay

--- a/packages/embed-examples/examples/common/index.ejs
+++ b/packages/embed-examples/examples/common/index.ejs
@@ -33,7 +33,9 @@
   </head>
 
   <body>
-    <iframe id="sdk-frame" allow="xr-spatial-tracking"></iframe>
+    <div class="container">
+      <iframe id="sdk-frame" allow="xr-spatial-tracking"></iframe>
+    </div>
     <div id="text" class="hidden"></div>
     <script type="text/javascript" src="./bundle.js"></script>
   </body>
